# webersim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  typedefs.h
doc/: lichtablenkung.html  omega.html  phi_dgl.html  qg.html  sonne.html
doc/html/: T_Umlauf.html  a.html  a_total.html  dgl_r.html  dgl_r_ansatz.html  dgl_r_w.html  elektrodynamik.html  ergebnis.html  index.html  numerische_berechnung.html  omega_total.html  omega_weber.html  p_phi.html  p_phi_1.html  p_phi_1_n_koerper.html  p_phi_1_n_koerper_1.html  p_phi_1_n_koerper_2.html  p_t.html  perihel.html  phi_1_sek.html  qg.html  r.html  r_total.html  r_v_a_total.html  r_v_a_total_vektor.html  r_v_w_h_k.html  rip.html  sonne.html  stoerungen.html  t.html  t_korrektur.html  ultima_ratio.html  v.html  v_total.html  vv_integration.html  zeit_als_winkel.html  zeit_als_winkel_format.html  zeit_als_winkel_vorteile.html
doc/latex/: 01_weber_kraft_em.tex  02_grundgleichungen.tex  analytische_loesung.tex  anwendung.tex  bahn_gleichungen.tex  beispiel.tex  beispiel_1.tex  beispiel_merkur.tex  beispiel_merkur_1.tex  beispiele.tex  bemerkungen.tex  berechnung_kappa.tex  beschleunigung_1_ordnung.tex  beschleunigung_skalarprodukt.tex  beta_formel.tex  bewegungsgleichung.tex  bewegungsgleichung_1.tex  dbt.html  dbt.tex  definitionen.tex  dgl_system.tex  differentialgleichung_omega.tex  differentialgleichung_x.tex  differentialgleichung_y.tex  drehimpulserhaltung.tex  drei_koerper_kraft.tex  eingangsparameter.tex  elektrisches_feld.tex  endergebnis.tex  erhaltungssicherung.tex  erweiterte_formel.tex  explizite_dgl_x.tex  explizite_dgl_y.tex  explizite_form.tex  gesamtloesung.tex  geschwindigkeiten.tex  geschwindigkeiten_1.tex  geschwindigkeitsquadrat.tex  gitter_hamiltonian.tex  gitter_qcd.tex  (+121 more)
doc/latex/Zusammenfassung/: kurz.tex  kurz.toc
doc/latex/anhang/: anhang.tex
doc/latex/antrieb/: antrieb.tex
doc/latex/atrd/: atrd.tex  atrd.toc
doc/latex/baryzentrisch/: baryzentrisch.tex
doc/latex/content/: 01_weber_kraft_em.tex  02_grundgleichungen.tex  03_r_phi.tex  04_r_phi.tex  04_w_phi.tex  05_r_phi.tex  05_v_phi.tex  06_T.tex  06_r_phi.tex  06_weber_kraft_em.tex  07_DM.tex  07_perihel.tex  07_rk4.tex  07_weber_kraft_em.tex  08_r_phi.tex  08_welle.tex  09_grundgleichungen.tex  09_weber_kraft_em.tex  10_1_w_phi.tex  10_grundgleichungen.tex  10_r_phi.tex  11_r_phi.tex  12_kausal.tex  12_w_phi.tex  13_v_phi.tex  14_1_w_phi.tex  14_2_v_phi.tex  15_kausal.tex  15_perihel.tex  16_T.tex  16_lichtablenkung.tex  18_T.tex  19_perihel.tex  20_T.tex  21_DM.tex  21_wg_dbt_synthese.tex  22_lichtablenkung.tex  22_rotverschiebung.tex  23_shapiro.tex  24_wg_dbt_synthese.tex  (+34 more)
doc/latex/dbt/: dbt.tex
doc/latex/diskussion/: diskussion.tex
doc/latex/einleitung/: einleitung.tex
doc/latex/emergenz/: emergenz.lot  emergenz.tex  emergenz.toc  glossar.tex
doc/latex/english/: glossar.tex  wdb.lof  wdb.lot  wdb.tex
doc/latex/faschismus/: 01_einleitung.tex  02_faschismus.tex  02a_industrie_und_faschismus.tex  03_nationalsozialismus.tex  04_antisemitismus.tex  05_sozialismus.tex  06_gegenwart.tex  07_fazit.tex  08_ausblick.tex  faschismus.tex  faschismus.toc
doc/latex/fazit/: fazit.tex
doc/latex/gwi-d/: gwi-d.tex  styles.tex
doc/latex/index/: index.tex
doc/latex/komplex/: komplex.tex
doc/latex/merkur_bahn/: merkur_bahn.tex
logging/: CMakeLists.txt  logging.c
logging/logging/: logging.h
physics/: CMakeLists.txt  physics.c
physics/physics/: physics.h
sm/: CMakeLists.txt  sm.c
sm/sm/: sm.h
src/: configuration.c  main.c  resources.c  states.h  typedefs.h
string/: CMakeLists.txt  string.c
string/string/: string.h
threading/: CMakeLists.txt  threading.c
threading/threading/: threading.h
vector/: CMakeLists.txt  vector.c
vector/vector/: vector.h
(+292 files in other folders)
